--- a/Prueba.html
+++ b/Prueba.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Hola mundo</h1>
     <p>Bienvenido a la pagina web de Diego</p>
+    <div>
+        <h2>Pon tu email para estar al tanto</h2>
+        <input type="text">
+        <input type="button" value="Enviar">
+    </div>
 </body>
 </html>
