cambio color formulario

--- a/Prueba.html
+++ b/Prueba.html
@@ -11,7 +11,7 @@
     <h1>Hola mundo</h1>
     <p>Bienvenido a la pagina web de Diego</p>
     <div>
-        <h2>Pon tu email para estar al tanto</h2>
+        <h2 class="descripcion-formulario">Pon tu email para estar al tanto</h2>
         <input type="text">
         <input type="button" value="Enviar">
     </div>
