--- a/Prueba.html
+++ b/Prueba.html
@@ -13,7 +13,12 @@
     <div>
         <h2 class="descripcion-formulario">Pon tu email para estar al tanto</h2>
         <input type="text">
-        <input type="button" value="Enviar">
+        <button onclick="onClickButtonForm()">Enviar</button>
     </div>
 </body>
+<script>
+    function onClickButtonForm() {
+      alert("el user dio click en el botón")
+    }
+    </script>
 </html>
