--- a/Prueba.html
+++ b/Prueba.html
@@ -13,7 +13,7 @@
     <div>
         <h2 class="descripcion-formulario">Pon tu email para estar al tanto</h2>
         <input type="text">
-        <button onclick="onClickButtonForm()">Enviar</button>
+        <button onclick="onClickButtonForm()">Enviar correo</button>
     </div>
 </body>
 <script>
