agregar texto informativo

--- a/Prueba.html
+++ b/Prueba.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/steyles-prueba.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
         <input type="text">
         <button onclick="onClickButtonForm()">Enviar correo</button>
     </div>
+    <p class="lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero quod delectus sit esse commodi amet aliquam facilis, illo vel ipsam. Qui molestias nam eos libero aut fugiat nulla quasi dolores?</p>
 </body>
 <script>
     function onClickButtonForm() {
